--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
   "homepage": "https://github.com/impactbyte-gon/learn-auth#readme",
   "devDependencies": {
     "nodemon": "1.18.10"
+  },
+  "dependencies": {
+    "express": "4.16.4",
+    "mongodb": "3.1.13",
+    "mongoose": "5.4.14"
   }
 }
