--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nodemon": "1.18.10"
   },
   "dependencies": {
+    "bcrypt": "3.0.4",
     "dotenv": "6.2.0",
     "express": "4.16.4",
     "mongodb": "3.1.13",
