--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "4.16.4",
     "jsonwebtoken": "8.5.0",
     "mongodb": "3.1.13",
-    "mongoose": "5.4.14"
+    "mongoose": "5.4.14",
+    "mongoose-sequence": "5.0.1"
   }
 }
